[metadata]
name = aiobastion
version = 0.0.23
author = Gautier Leveille
author_email = gautier.leveille@labanquepostale.fr
description = Manage your Cyberark implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/labanquepostale/aiobastion
project_urls =
    Bug Tracker = https://github.com/labanquepostale/aiobastion/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir =
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
include =
    aiobastion
exclude =
    docs*
